--- a/jsipahio/topic04-keys/templates/kind_update.html
+++ b/jsipahio/topic04-keys/templates/kind_update.html
@@ -5,12 +5,11 @@
     </head>
     <body>
         <h1>Update</h1>
-        <form method="post" action="/update">
+        <form method="post" action="/update/kind">
             <input hidden name="id" value="{{data[0]}}"><br>
             <label for="name">Name:</label><br><input name="name" value="{{data[1]}}"><br>
-            <label for="type">Type:</label><br><input name="type" value="{{data[2]}}"><br>
-            <label for="age">Age:</label><br><input name="age" value="{{data[3]}}"><br>
-            <label for="owner">Owner:</label><br><input name="owner" value="{{data[4]}}"><br>
+            <label for="food">Food:</label><br><input name="food" value="{{data[2]}}"><br>
+            <label for="noise">Noise:</label><br><input name="noise" value="{{data[3]}}"><br>
             <button type="submit">Update</button>
         </form>
     </body>
