--- a/jsipahio/topic04-keys/templates/list.html
+++ b/jsipahio/topic04-keys/templates/list.html
@@ -28,5 +28,6 @@
                 </tr>
             {% endfor %}
         </table>
+        <p>Add a new animal <a href="/create">here</a>!</p>
     </body>
 </html>
