--- a/jsipahio/topic04-keys/templates/kind_create.html
+++ b/jsipahio/topic04-keys/templates/kind_create.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <div>This is the create template</div>
-        <form action="/create" method="post">
+        <form action="/create/kind" method="post">
             <label for="name">Kind:</label><br><input name="name"><br>
-            <label for="type">Food:</label><br><input name="type"><br>
-            <label for="age">Noise:</label><br><input name="age"><br>
+            <label for="food">Food:</label><br><input name="food"><br>
+            <label for="noise">Noise:</label><br><input name="noise"><br>
             <button type="submit">Create</button>
         </form>
     </body>
