--- a/jsipahio/topic04-keys/templates/update.html
+++ b/jsipahio/topic04-keys/templates/update.html
@@ -9,13 +9,11 @@
             <input hidden name="id" value="{{data[0]}}"><br>
             <label for="name">Name:</label><br><input name="name" value="{{data[1]}}"><br>
             <label for="type">Type:</label><br>
-            <select name="type" value="{{data[3]}}">
-                {% for row in rows %}
-                    {% for item in row %}
-                        <option value="{{ item[0] }}">
-                            {{ item[1] }}
-                        </option>
-                    {% endfor %}
+            <select name="kind" value="{{data[3]}}">
+                {% for row in rows %}\
+                    <option value="{{ row[0] }}">
+                        {{ row[1] }}
+                    </option>
                 {% endfor %}
             </select>
             <br>
