--- a/jsipahio/topic05-orm/templates/create.html
+++ b/jsipahio/topic05-orm/templates/create.html
@@ -15,8 +15,8 @@
             <label for="kind">Type:</label><br>
             <select name="kind" value="1">
                 {% for row in rows %}
-                    <option value="{{ row[0] }}">
-                        {{ row[1] }}
+                    <option value="{{ row.id }}">
+                        {{ row.kind_name }}
                     </option>
                 {% endfor %}
             </select>
